add additional step for linter setup